Fixed white space bottom

--- a/styles/login.css
+++ b/styles/login.css
@@ -193,3 +193,6 @@ body {
 	background: lightcyan;
 	color: black;
 }
+main{
+	margin-bottom: 150px;
+}
